--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div>
-        <form>
-            
-        </form>
+    <div> <!--form with a search input and submit button-->
+       <form id="search">
+        <input type="text" id="searchInput" placeholder="Enter username">
+        <button type="submit">Search</button>
+       </form>
     </div>
 <script src="script.js"></script>  
 </body>
