--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button type="submit">Search</button>
        </form>
     </div>
+    <div id="results"></div>
 <script src="script.js"></script>  
 </body>
 </html>
