--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github Search App</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>GitHub User Search</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div> <!--form with a search input and submit button-->
-       <form id="search">
-        <input type="text" id="searchInput" placeholder="Enter username">
+    <form id="searchForm">
+        <input type="text" id="searchInput" placeholder="Enter GitHub username">
         <button type="submit">Search</button>
-       </form>
-    </div>
+    </form>
     <div id="results"></div>
-<script src="script.js"></script>  
+
+    <script src="script.js"></script>
 </body>
 </html>
