updated css styles

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <form id="searchForm">
-        <input type="text" id="searchInput" placeholder="Enter GitHub username">
-        <button type="submit">Search</button>
+        <input type="text" id="searchInput" placeholder="enter username">
+        <button type="submit">SEARCH</button>
     </form>
     <div id="results"></div>
 
